# agentstow

./: .autocorrectrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: prek-checks.yaml
crates/agentstow-cli/: Cargo.toml
crates/agentstow-cli/src/: bootstrap.rs  cli.rs  commands.rs  lib.rs  link.rs  main.rs  output.rs  workspace.rs
crates/agentstow-cli/src/tests/: mod.rs
crates/agentstow-cli/tests/: cli.rs  cli_env.rs  cli_link.rs  cli_render.rs  cli_scripts.rs  cli_workspace.rs
crates/agentstow-core/: Cargo.toml
crates/agentstow-core/src/: dirs.rs  error.rs  ids.rs  lib.rs  path.rs  secrets.rs  types.rs
crates/agentstow-core/src/tests/: mod.rs
crates/agentstow-env/: Cargo.toml
crates/agentstow-env/src/: lib.rs
crates/agentstow-env/src/tests/: mod.rs
crates/agentstow-git/: Cargo.toml
crates/agentstow-git/src/: lib.rs
crates/agentstow-git/src/tests/: mod.rs
crates/agentstow-linker/: Cargo.toml
crates/agentstow-linker/src/: apply.rs  build.rs  fsops.rs  health.rs  lib.rs  preflight.rs  types.rs
crates/agentstow-linker/src/tests/: mod.rs  rendered_dir.rs
crates/agentstow-manifest/: Cargo.toml
crates/agentstow-manifest/src/: lib.rs  mcp.rs  validate.rs  workspace.rs
crates/agentstow-manifest/src/tests/: mod.rs  workspace.rs
crates/agentstow-mcp/: Cargo.toml
crates/agentstow-mcp/src/: adapter.rs  api.rs  lib.rs  parse.rs  snippet.rs  types.rs
crates/agentstow-mcp/src/tests/: mod.rs
crates/agentstow-render/: Cargo.toml
crates/agentstow-render/src/: lib.rs
crates/agentstow-render/src/tests/: mod.rs
crates/agentstow-scripts/: Cargo.toml
crates/agentstow-scripts/src/: lib.rs
crates/agentstow-scripts/src/tests/: mod.rs
crates/agentstow-server/: Cargo.toml
crates/agentstow-server/src/: api.rs  lib.rs  services.rs  ui.rs  watch.rs
crates/agentstow-server/src/api/: artifacts.rs  helpers.rs  links.rs  read_models.rs  workspace.rs
crates/agentstow-server/src/services/: artifact.rs  common.rs  env.rs  git.rs  issues.rs  links.rs  mcp.rs  profile.rs  scripts.rs  summary.rs  workspace.rs
crates/agentstow-server/src/tests/: api.rs  artifacts.rs  execution.rs  fixtures.rs  git.rs  links.rs  mod.rs  read_models.rs  ui.rs  watch.rs  workspace.rs
crates/agentstow-server/src/ui/: index.html
crates/agentstow-server/src/watch/: events.rs  runtime.rs
crates/agentstow-state/: Cargo.toml
crates/agentstow-state/src/: lib.rs
crates/agentstow-state/src/tests/: mod.rs
crates/agentstow-validate/: Cargo.toml
crates/agentstow-validate/src/: lib.rs
crates/agentstow-validate/src/tests/: mod.rs
crates/agentstow-web-types/: Cargo.toml
crates/agentstow-web-types/bindings/: HealthResponse.ts  InstallMethodResponse.ts  LinkRecordResponse.ts  ManifestResponse.ts
crates/agentstow-web-types/src/: bindings.rs  lib.rs  links.rs  workspace.rs
crates/agentstow-web-types/src/tests/: mod.rs
docs/: README.md
e2e/: .gitignore  README.md  pyproject.toml
e2e/data/: README.md
e2e/data/providers/claude/: .env  agentstow.toml  mcps.json  reference.md
e2e/data/providers/codex/: .env  agentstow.toml  mcps.json  reference.md
e2e/data/providers/gemini/: .env  agentstow.toml  mcps.json  reference.md
e2e/data/real-example/: .env  README.md  reference.md
e2e/data/targets/dir-copy/: agentstow.toml
e2e/tests/: .placeholder
e2e/tests/bdd/: .placeholder  conftest.py  test_link_bdd.py  test_link_plan_bdd.py  test_providers_bdd.py  test_real_example_bdd.py  test_render_bdd.py  test_scripts_bdd.py  test_workspace_bdd.py
e2e/tests/bdd/features/: link.feature  link_plan.feature  providers.feature  real_example.feature  render.feature  scripts_timeout.feature  workspace.feature
e2e/tests/bdd/steps/: test_common_steps.py  test_fixture_steps.py  test_link_steps.py  test_render_steps.py  test_scripts_steps.py  test_workspace_steps.py
e2e/tests/bdd/support/: cli.py  fs.py  git.py
real-example/: .env  README.md  agentstow.toml  mcps.json  reference.md
real-example/descriptions/: explorer.md
real-example/templates/: AGENTS.md.tera  dotenv.tera
real-example/templates/agents/: explorer.toml.tera  worker.toml.tera
scripts/: README.md
scripts/justfile/: init.ps1  init.sh  serve.ps1  web.ps1  web.sh
src/tests/: mod.rs
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.svelte  app.css  main.ts  vite-env.d.ts
web/src/lib/: types.ts
web/src/lib/api/: client.ts
web/src/lib/bindings/: ApiError.ts  ArtifactDetailResponse.ts  ArtifactGitCompareResponse.ts  ArtifactGitHistoryResponse.ts  ArtifactGitRollbackRequest.ts  ArtifactGitRollbackResponse.ts  ArtifactKindResponse.ts  ArtifactSourceResponse.ts  ArtifactSourceUpdateRequest.ts  ArtifactSummaryResponse.ts  CwdPolicyResponse.ts  EnvEmitRequest.ts  EnvEmitResponse.ts  EnvEmitSetSummaryResponse.ts  EnvSetSummaryResponse.ts  EnvUsageOwnerKindResponse.ts  EnvUsageRefResponse.ts  EnvVarSummaryResponse.ts  GitCommitSummaryResponse.ts  ImpactAnalysisResponse.ts  ImpactSubjectKindResponse.ts  LinkApplyRequest.ts  LinkDesiredInstallResponse.ts  LinkOperationActionResponse.ts  LinkOperationItemResponse.ts  LinkOperationResponse.ts  LinkPlanItemResponse.ts  LinkPlanRequest.ts  LinkRepairRequest.ts  LinkStatusResponseItem.ts  ManifestSourceResponse.ts  ManifestSourceUpdateRequest.ts  McpCheckResponse.ts  McpCheckStatusResponse.ts  McpHeaderResponse.ts  McpRenderResponse.ts  McpServerSummaryResponse.ts  McpTestResponse.ts  McpTransportKindResponse.ts  McpValidateResponse.ts  (+32 more)
web/src/lib/components/: CodeEditor.browser.test.ts  CodeEditor.svelte  OutputViewer.svelte  SplitView.svelte  Workbench.svelte  WorkbenchViewRouter.svelte
web/src/lib/utils/: format.ts
web/tests/browser/: setup.ts
web/tests/e2e/: helpers.ts  start-agentstow-server.mjs  workbench.audit.spec.ts  workbench.boot.spec.ts  workbench.flow.spec.ts  workbench.smoke.spec.ts  workbench.spec.ts
web/tests/fixtures/: workbench.ts
(+61 files in other folders)
