[workspace.package]
authors = ["unic <yuniqueunic@gmail.com>"]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/agentstow-cli", "crates/agentstow-core", "crates/agentstow-env", "crates/agentstow-git", "crates/agentstow-linker", "crates/agentstow-manifest", "crates/agentstow-mcp", "crates/agentstow-render", "crates/agentstow-scripts", "crates/agentstow-server", "crates/agentstow-state", "crates/agentstow-validate",
]
exclude = [
    "e2e/**",
    ".github/**",
    ".vscode/**",
    ".pytest_cache/**",
    "target/**",
]

[workspace.dependencies]
anyhow = "1"

assert_fs= "1"
rstest = "0.26"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"



# only works with cargo-release
[workspace.metadata.release]
pre-release-replacements = [
    # Update inline-table dependency snippets like:
    # agentstow = { version = "0.2", features = ["custom"] }
    { file = "README.md", search = "agentstow\\s*=\\s*\\{\\s*version\\s*=\\s*\"[0-9]+\\.[0-9]+(\\.[0-9]+)?(-[0-9A-Za-z.-]+)?\"", replace = "agentstow = { version = \"{{version}}\"" },
    # Update plain dependency snippets like:
    # agentstow = "0.2"
    { file = "README.md", search = "agentstow\\s*=\\s*\"[0-9]+\\.[0-9]+(\\.[0-9]+)?(-[0-9A-Za-z.-]+)?\"", replace = "agentstow = \"{{version}}\"", min = 0 },
]
