[workspace.package]
authors = ["unic <yuniqueunic@gmail.com>"]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/agentstow-cli",
    "crates/agentstow-core",
    "crates/agentstow-env",
    "crates/agentstow-git",
    "crates/agentstow-linker",
    "crates/agentstow-manifest",
    "crates/agentstow-mcp",
    "crates/agentstow-render",
    "crates/agentstow-scripts",
    "crates/agentstow-server",
    "crates/agentstow-state",
    "crates/agentstow-web-types",
    "crates/agentstow-validate",
]
exclude = [
    "e2e/**",
    ".github/**",
    ".vscode/**",
    ".pytest_cache/**",
    "target/**",
]

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
axum = "0.8"
axum-test = "19"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
command-group = { version = "5", features = ["with-tokio"] }
directories = "6"
dotenvy = "0.15"
dunce = "1"
fs-err = "3"
ignore = "0.4"
insta = { version = "1", features = ["json"] }
jsonschema = "0.45"
notify = "8"
notify-debouncer-full = "0.7"
pathdiff = "0.2"
predicates = "3"
pretty_assertions = "1"
proptest = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
rfd = "0.17"
rstest = "0.26"
schemars = "1"
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
shlex = "1"
snapbox = "1"
temp-env = "0.3"
tempfile = "3"
tera = "1"
thiserror = "2"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.9.8"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
trycmd = "1"
ts-rs = { version = "12", features = ["format"] }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"



# only works with cargo-release
[workspace.metadata.release]
pre-release-replacements = [
    # Update inline-table dependency snippets like:
    # agentstow = { version = "0.2", features = ["custom"] }
    { file = "README.md", search = "agentstow\\s*=\\s*\\{\\s*version\\s*=\\s*\"[0-9]+\\.[0-9]+(\\.[0-9]+)?(-[0-9A-Za-z.-]+)?\"", replace = "agentstow = { version = \"{{version}}\"" },
    # Update plain dependency snippets like:
    # agentstow = "0.2"
    { file = "README.md", search = "agentstow\\s*=\\s*\"[0-9]+\\.[0-9]+(\\.[0-9]+)?(-[0-9A-Za-z.-]+)?\"", replace = "agentstow = \"{{version}}\"", min = 0 },
]
