[package]
name = "agentstow-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true


[[bin]]
name = "agentstow"
path = "src/main.rs"

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-env = { path = "../agentstow-env" }
agentstow-git = { path = "../agentstow-git" }
agentstow-linker = { path = "../agentstow-linker" }
agentstow-manifest = { path = "../agentstow-manifest" }
agentstow-mcp = { path = "../agentstow-mcp" }
agentstow-render = { path = "../agentstow-render" }
agentstow-scripts = { path = "../agentstow-scripts" }
agentstow-server = { path = "../agentstow-server" }
agentstow-state = { path = "../agentstow-state" }
agentstow-validate = { path = "../agentstow-validate" }
anyhow.workspace = true
clap.workspace = true
blake3.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
insta.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true
snapbox.workspace = true
temp-env.workspace = true
trycmd.workspace = true
