[package]
name = "agentstow-core"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
dunce.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
proptest.workspace = true
