[package]
name = "agentstow-git"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
anyhow.workspace = true
command-group.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
