[package]
name = "agentstow-linker"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-manifest = { path = "../agentstow-manifest" }
agentstow-render = { path = "../agentstow-render" }
agentstow-state = { path = "../agentstow-state" }
agentstow-validate = { path = "../agentstow-validate" }
anyhow.workspace = true
blake3.workspace = true
dunce.workspace = true
fs-err.workspace = true
pathdiff.workspace = true
same-file.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
assert_fs.workspace = true
pretty_assertions.workspace = true
