[package]
name = "agentstow-manifest"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
