[package]
name = "agentstow-render"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-manifest = { path = "../agentstow-manifest" }
agentstow-mcp = { path = "../agentstow-mcp" }
anyhow.workspace = true
dotenvy.workspace = true
fs-err.workspace = true
ignore.workspace = true
serde_json.workspace = true
tera.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_fs.workspace = true
pretty_assertions.workspace = true
