[package]
name = "agentstow-scripts"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-manifest = { path = "../agentstow-manifest" }
anyhow.workspace = true
command-group.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_fs.workspace = true
pretty_assertions.workspace = true
