[package]
name = "agentstow-server"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-manifest = { path = "../agentstow-manifest" }
agentstow-render = { path = "../agentstow-render" }
agentstow-state = { path = "../agentstow-state" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
