[package]
name = "agentstow-server"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-env = { path = "../agentstow-env" }
agentstow-git = { path = "../agentstow-git" }
agentstow-linker = { path = "../agentstow-linker" }
agentstow-manifest = { path = "../agentstow-manifest" }
agentstow-mcp = { path = "../agentstow-mcp" }
agentstow-render = { path = "../agentstow-render" }
agentstow-scripts = { path = "../agentstow-scripts" }
agentstow-state = { path = "../agentstow-state" }
agentstow-validate = { path = "../agentstow-validate" }
agentstow-web-types = { path = "../agentstow-web-types" }
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
fs-err.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd.workspace = true
thiserror.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_fs.workspace = true
axum-test = "19"
pretty_assertions.workspace = true
serial_test.workspace = true
temp-env.workspace = true
