[package]
name = "agentstow-validate"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
agentstow-core = { path = "../agentstow-core" }
agentstow-manifest = { path = "../agentstow-manifest" }
anyhow.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
